2010-10-06  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-query.lisp (query-print-string): Change cursor color
	and show parenthesis matching with colors (on match and on
	errors).

2010-10-05  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-internal.lisp (show-all-children): Do not raise a
	child when its parent is hidden.

2010-10-02  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-circulate-mode.lisp (select-next-subchild): Add the
	possibility to circulate over subchild of the current child.

	* src/clfswm-expose-mode.lisp (expose-all-windows-mode)
	(expose-windows-generic): Add an escape-body function to return to
	the original state on escape key.

	* src/clfswm-util.lisp (bind-on-slot): Add an optional parameter
	to bind the current child from the configuration file.

2010-10-01  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-nw-hooks.lisp (absorb-window-nw-hook): Absorb new
	window hook: the frame absorb all new windows that match
	nw-absorb-test frame data slot.

2010-09-30  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-expose-mode.lisp (expose-create-window): Show window
	title in accel window.

2010-09-29  Philippe Brochard  <pbrochard@common-lisp.net>

	* configure: Use the Xavier Maillard clfswm script in contrib to
	build an executable in the standard way.

2010-09-26  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-expose-mode.lisp (expose-mode-display-accel-windows):
	New functions. Add a window on each child in the expose mode to
	quickly select them.

	* src/clfswm-internal.lisp (child-x, child-y, child-width)
	(child-height): New methods to get real child coordinates.

2010-09-25  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-layout.lisp (*-layout): Use child-position.

	* src/clfswm-internal.lisp (child-position): New function.

	* src/clfswm-expose-mode.lisp (expose-windows-mode)
	(expose-all-windows-mode): Use a generic mode.
